# collection-agent

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  config.yaml  pyproject.toml
.omc/state/: agent-replay-6a7f2299-6cf7-445c-8cfa-fd221d5f57ce.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: TODO.md  agent-architecture-spec.md  architecture-report.html  collection-workflow.excalidraw  collection-workflow.html  plan.md  refactor-plan.md  refactor-spec.md
plans/: persistence.md
scripts/: auto_test.py  test_client.py  web_server.py
scripts/e2e_tests/: runner.py  test_cases.py
src/: cli.py  main.py  scheduler.py
src/agent/: __init__.py  session.py
src/channels/: __init__.py  base.py  chatbot.py  push.py  registry.py  voice.py
src/chatbot/: __init__.py  agent.py
src/collect_agent/: cli.py  decider.py  harness.py  main.py  scheduler.py
src/compliance/: checker.py  rules.py
src/config/: __init__.py  manager.py  models.py
src/context/: __init__.py  manager.py  window.py
src/core/: constants.py  models.py
src/events/: router.py
src/intent/: __init__.py  recognizer.py
src/llm/: __init__.py  clients.py  prompts.py
src/orchestrator/: lock.py  orchestrator.py
src/prompts/: __init__.py  engine.py  schemas.py  xml_parser.py
src/quota/: manager.py  profile.py  usage.py
src/session/: manager.py  session.py  state_machine.py  timeout_tracker.py
src/skills/: __init__.py  base.py  complaint_skill.py  crisis_skill.py  dispute_skill.py  executor.py  followup_skill.py  negotiation_skill.py  onboard_skill.py  payment_guidance_skill.py  (+4 more)
tests/: conftest.py  test_agent_session.py  test_channels.py  test_chatbot_agent.py  test_compliance.py  test_config.py  test_context.py  test_core.py  test_decider.py  test_events.py  test_harness.py  test_integration.py  test_llm.py  test_orchestrator.py  test_quota.py  test_session.py  test_skills.py  test_storage.py  test_strategy.py  test_tools.py
web/: index.html
(+141 files in other folders)
