[project]
name = "collect-agent"
version = "0.1.0"
description = "AI-powered debt collection agent"
readme = "README.md"
authors = [
    { name = "geoqiao", email = "realvincentqiao@gmail.com" }
]
requires-python = ">=3.12.3"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
collect-agent = "collect_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
